--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.7",
-        "santigarcor/laratrust": "^7.1",
-        "spatie/browsershot": "^3.57"
+        "santigarcor/laratrust": "^7.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
